Actualización de módulos en users, user_projects, user_documentation, y qa_station

--- a/about_us/templates/about_us/about_us.html
+++ b/about_us/templates/about_us/about_us.html
@@ -17,7 +17,7 @@
       <!-- Enlaces de ancla a secciones dentro de la misma página -->
       <li><a href="#porque-qa-station">¿Porque QA Station?</a></li>
       <li><a href="#diferencias-clave">Diferencias Clave</a></li>
-      <li><a href="#topico-2">Topico 2</a></li>
+      <li><a href="#topico-2">Caracteristicas similares</a></li>
       <li><a href="#topico-3">Automatización de Pruebas</a></li>
       <li><a href="#topico-4">Pruebas Funcionales y No Funcionales</a></li>
       <li><a href="#topico-5">Integración Continua (CI/CD)</a></li>
