--- a/functional_tests/templates/functional_tests/main.html
+++ b/functional_tests/templates/functional_tests/main.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    {% load static %}
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{% static 'functional_test.css' %}">
-    <title>QA Station</title>
-    <script src="{% static 'functional_test.js' %}" defer></script>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block extra_css %}
+  <!-- Archivos CSS específicos de la página -->
+  <link rel="stylesheet" href="{% static 'functional_test.css' %}">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
+{% endblock %}
+
+{% block content %}
+<div class="main-container">
 
     <!-- Contenedor fijo a la izquierda para las pruebas -->
     <div class="sidebar-fixed">
@@ -75,5 +75,11 @@
             <div id="log-output"></div>
         </div>
     </div>
-</body>
+</div>
+{% endblock %}
+
+{% block extra_js %}
+  <!-- Archivos JavaScript específicos de la página -->
+  <script src="{% static 'functional_test.js' %}"></script>
+{% endblock %}
 </html>
