--- a/users/static/users/login/users_login.css
+++ b/users/static/users/login/users_login.css
@@ -1,30 +1,38 @@
+
 /* Estilos generales */
-body, html {
-    height: 100%;
-    margin: 0;
+html {
     font-family: 'Poppins', sans-serif;
+    align-items: center;
 }
 
 /* Contenedor del background */
 .background-container {
-    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 80vh; 
     background-color: white; /* Fondo blanco */
+    width: 100%; /* Asegura que el contenedor ocupe todo el ancho disponible */
+
 }
 
 /* Estilos para el logo */
 .logo img {
-    width: 200%;  /* El logo se ajusta al tamaño del formulario */
+    width: 200%;  
     max-width: 210px; /* Tamaño máximo igual al del formulario */
     height: auto;
-    display: block;
-    margin: 0 auto 110px; /* Centra el logo horizontalmente */
-    
-
+    margin-top: 20px;
+    margin: 0 auto 10px; /* Centra el logo horizontalmente */
 }
+
+.title {
+    text-align: center;
+    font-weight: 500;
+    margin-bottom: 20px; /* Centrar los inputs dentro del formulario */
+}
+
+
+
 /* Estilos para el formulario */
 .login-form {
     width: 100%;
@@ -34,7 +42,6 @@ body, html {
     border-radius: 15px;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
     display: flex;
-    flex-direction: column;
     justify-content: center; 
     align-items: center;
 }
@@ -46,18 +53,17 @@ body, html {
 
 .form-group label {
     display: block;
-    margin-bottom: 18px;
+    margin-bottom: 5px;
     font-size: 1.0rem;
     color: #333;
 }
-
 
 .form-group input {
     width: 100%;
     padding: 15px;
     font-size: 1rem;
     border: 1px solid #ddd;
-    border-radius: 8px;
+    border-radius: 4px;
     box-sizing: border-box;  /* Asegura que el padding esté dentro del tamaño total */
 }
 
@@ -77,4 +83,13 @@ body, html {
 
 .btn-login:hover {
     background-color: #2e8b3d; /* Un tono más oscuro al hacer hover */
+}
+    
+p {
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    unicode-bidi: isolate;
+    text-align: center; /* Esta línea centra el texto */
 }
