--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -7,59 +7,51 @@
 {% endblock %}
 
 {% block content %}
-
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <!-- Metadatos básicos -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Iniciar Sesión - QA Station</title>
-  </head>
+<!-- Contenedor principal para el login -->
+<div class="background-container">
   
-  <body>
-    <!-- Contenedor principal para el login -->
-    <div class="background-container">
-      
-      <!-- Logo de la página -->
-      <div class="logo">
-        <img src="{% static 'image/logo.png' %}" alt="Logo de QA Station" />
-      </div>
-      
-      <!-- Formulario de inicio de sesión -->
-      <form action="{% url 'login' %}" method="POST" class="login-form">
-        {% csrf_token %}
-        
-        <!-- Campo de correo/usuario -->
-        <div class="form-group">
-          <label for="username">Correo</label>
-          <input
-            type="text"
-            id="username"
-            name="username"
-            placeholder="Ingresa tu correo"
-            required
-          />
-        </div>
-        
-        <!-- Campo de contraseña -->
-        <div class="form-group">
-          <label for="password">Contraseña</label>
-          <input
-            type="password"
-            id="password"
-            name="password"
-            placeholder="Ingresa tu contraseña"
-            required
-          />
-        </div>
-        
-        <!-- Botón de envío -->
-        <button type="submit" class="btn-login">Iniciar sesión</button>
-      </form>
+  <!-- Logo de la página -->
+  <div class="logo">
+    <img src="{% static 'image/logo.png' %}" alt="Logo de QA Station" />
+  </div>
+   <!-- Texto debajo del logo -->
+  <h2 class="title">Inicio sesión</h2>
+  
+  <!-- Formulario de inicio de sesión -->
+  <form action="{% url 'login' %}" method="POST" class="login-form">
+    {% csrf_token %}
+    
+    <!-- Campo de correo/usuario -->
+    <div class="form-group">
+      <label for="username">Correo</label>
+      <input
+        type="text"
+        id="username"
+        name="username"
+        placeholder="Ingresa tu correo"
+        required
+      />
     </div>
-  </body>
-</html>
+    
+    <!-- Campo de contraseña -->
+    <div class="form-group">
+      <label for="password">Contraseña</label>
+      <input
+        type="password"
+        id="password"
+        name="password"
+        placeholder="Ingresa tu contraseña"
+        required
+      />
+    </div>
+    
+    <!-- Botón de envío -->
+    <button type="submit" class="btn-login">Iniciar sesión</button>
+  </form>
+    <!-- Enlace para iniciar sesión -->
+  <p>¿No tienes cuenta? <a href="{% url 'register' %}"> Regístrate aquí</a></p>
+
+</div>
 {% endblock %} 
 {% block extra_js %}
 <script src="{% static 'users/login/users_login.js' %}"></script>
