--- a/users/static/users/login/users_login.css
+++ b/users/static/users/login/users_login.css
@@ -2,18 +2,19 @@
 /* Estilos generales */
 html {
     font-family: 'Poppins', sans-serif;
-    align-items: center;
-}
 
+}
 /* Contenedor del background */
 .background-container {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 80vh; 
     background-color: white; /* Fondo blanco */
     width: 100%; /* Asegura que el contenedor ocupe todo el ancho disponible */
-
+    display: flex;
+    justify-content: center;  /* Centra horizontalmente */
+    align-items: center;      /* Centra verticalmente */
+    height: 100vh;            /* Ocupa toda la altura de la ventana */
 }
 
 /* Estilos para el logo */
@@ -21,7 +22,7 @@ html {
     width: 200%;  
     max-width: 210px; /* Tamaño máximo igual al del formulario */
     height: auto;
-    margin-top: 20px;
+    margin-top: px;
     margin: 0 auto 10px; /* Centra el logo horizontalmente */
 }
 
@@ -31,8 +32,6 @@ html {
     margin-bottom: 20px; /* Centrar los inputs dentro del formulario */
 }
 
-
-
 /* Estilos para el formulario */
 .login-form {
     width: 100%;
@@ -41,7 +40,6 @@ html {
     background-color: whitesmoke; /* Fondo blanco para el formulario */
     border-radius: 15px;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
-    display: flex;
     justify-content: center; 
     align-items: center;
 }
@@ -65,6 +63,10 @@ html {
     border: 1px solid #ddd;
     border-radius: 4px;
     box-sizing: border-box;  /* Asegura que el padding esté dentro del tamaño total */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;  /* Alinea los elementos al inicio dentro del contenedor */
+
 }
 
 /* Estilos para el botón de inicio de sesión */
@@ -92,4 +94,34 @@ p {
     margin-inline-end: 0px;
     unicode-bidi: isolate;
     text-align: center; /* Esta línea centra el texto */
+}
+.password-container {
+    position: relative;
+}
+
+#password {
+    width: 100%;
+    padding-right: 30px;  /* Espacio para el ícono */
+}
+
+#toggle-password {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
+
+.error-message {
+    color: red;
+    background-color: #f8d7da;
+    padding: 10px;
+    margin: 5px 0;
+    border-radius: 5px;
+}
+
+.recovery-options {
+    margin-top: 10px;
+    font-size: 0.9em;
+    text-align: center;
 }
