--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -4,6 +4,7 @@
 {% block extra_css %}
   <link rel="stylesheet" href="{% static 'users/login/users_login.css' %}" />
   <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 {% endblock %}
 
 {% block content %}
@@ -14,8 +15,9 @@
   <div class="logo">
     <img src="{% static 'image/logo.png' %}" alt="Logo de QA Station" />
   </div>
-   <!-- Texto debajo del logo -->
-  <h2 class="title">Inicio sesión</h2>
+  
+  <!-- Texto debajo del logo -->
+  <h2 class="title">Inicio de sesión</h2>
   
   <!-- Formulario de inicio de sesión -->
   <form action="{% url 'login' %}" method="POST" class="login-form">
@@ -23,37 +25,47 @@
     
     <!-- Campo de correo/usuario -->
     <div class="form-group">
-      <label for="username">Correo</label>
+      <label for="email">Correo</label>
       <input
-        type="text"
-        id="username"
+        type="email"
+        id="email"
         name="username"
         placeholder="Ingresa tu correo"
         required
       />
+      {% if form.email.errors %}
+        <div class="error-message">{{ form.email.errors.0 }}</div>
+      {% endif %}
     </div>
     
     <!-- Campo de contraseña -->
     <div class="form-group">
       <label for="password">Contraseña</label>
-      <input
-        type="password"
-        id="password"
-        name="password"
-        placeholder="Ingresa tu contraseña"
-        required
-      />
+      <div class="password-container" style="position: relative;">
+        <input type="password" id="password" name="password" placeholder="Ingresa tu contraseña" required />
+        <i class="far fa-eye" id="toggle-password" style="position: absolute; top: 50%; right: 10px; cursor: pointer;"></i>
+      </div>
+      {% if form.password.errors %}
+        <div class="error-message">{{ form.password.errors.0 }}</div>
+      {% endif %}
     </div>
-    
+
+    <!-- Enlace para recuperación de contraseña -->
+    <div class="recovery-options">
+      <a href="{% url 'password_reset' %}">¿Olvidaste tu contraseña?</a>
+      <p>                                                          </p>
+    </div>
+
     <!-- Botón de envío -->
     <button type="submit" class="btn-login">Iniciar sesión</button>
   </form>
-    <!-- Enlace para iniciar sesión -->
+
+  <!-- Enlace para registrarse -->
   <p>¿No tienes cuenta? <a href="{% url 'register' %}"> Regístrate aquí</a></p>
 
 </div>
 {% endblock %} 
+
 {% block extra_js %}
 <script src="{% static 'users/login/users_login.js' %}"></script>
 {% endblock %}
-      
