--- a/ai_module/templates/testcases.html
+++ b/ai_module/templates/testcases.html
@@ -72,6 +72,26 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Tu script adicional -->
     <script src="{% static 'ai_module/ai_module.js' %}"></script>
+    <script>
+        function enviarJSON() {
+            fetch("{% url 'enviar_json' %}", {  // Ahora Django procesa esta URL
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json",
+                    "X-CSRFToken": "{{ csrf_token }}"
+                },
+                body: JSON.stringify({ key: "valor" })
+            })
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById("mensaje").innerText = data.mensaje;
+            })
+            .catch(error => {
+                console.error("Error al enviar JSON:", error);
+                document.getElementById("mensaje").innerText = "Error al enviar JSON.";
+            });
+        }
+    </script>
     
 </body>
 </html>
