--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -18,7 +18,7 @@
   <h2 class="title">Recupera tu contraseña</h2>
 
   <!-- Formulario de recuperación de contraseña -->
-  <form class="pw-form" method="POST" action="{% url 'password_reset' %}">
+  <form class="pw-form" method="POST" action="{% url 'users:password_reset' %}">
     {% csrf_token %}
 
     <!-- Dirección de correo electrónico -->
@@ -38,7 +38,7 @@
   </form>
 
   <!-- Enlace para iniciar sesión -->
-  <p>¿Ya tienes una cuenta? <a href="{% url 'login' %}">Inicia sesión aquí</a></p>
+  <p>¿Ya tienes una cuenta? <a href="{% url 'users:login' %}">Inicia sesión aquí</a></p>
 </div>
 {% endblock %}
 
