--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -33,7 +33,7 @@
       <h2 class="title">Crea tu cuenta</h2>
 
       <!-- Formulario de registro -->
-      <form class="register-form" method="POST" action="{% url 'register' %}">
+      <form class="register-form" method="POST" action="{% url 'users:register' %}">
         {% csrf_token %}
         
         <!-- Nombre -->
