--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -2,72 +2,30 @@
 {% load static %}
 
 {% block extra_css %}
-  <link rel="stylesheet" href="{% static '/users/register.css' %}" />
-  <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+<link rel="stylesheet" href="{% static '/users/register.css' %}" />
+<link rel="stylesheet" href="{% static 'css/style.css' %}" />
 {% endblock %}
 
 {% block content %}
-
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <!-- Metadatos básicos -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registro - QA Station</title>
-
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registro</title>
-  </head>
-
-  <body>
-    <div class="background-container">
-      <!-- Logo -->
-      <div class="register-logo">
-        <img src="{% static '/image/logo.png' %}" alt="Logo de QA Station" />
-      </div>
-
-      <!-- Texto debajo del logo -->
-      <h2 class="title">Crea tu cuenta</h2>
-
-      <!-- Formulario de registro -->
-      <form class="register-form" method="POST" action="{% url 'users:register' %}">
-        {% csrf_token %}
-        
-        <!-- Nombre -->
-        <div class="form-group">
-          <label for="nombre">Nombre</label>
-          <input type="text" id="nombre" name="nombre" required/>
-        </div>
-
-        <!-- Apellidos -->
-        <div class="form-group">
-          <label for="apellidos">Apellidos</label>
-          <input type="text" id="apellidos" name="apellidos" required />
-        </div>
-
-        <!-- Correo Electrónico -->
-        <div class="form-group">
-          <label for="email">Correo Electrónico</label>
-          <input type="email" id="email" name="email" required />
-        </div>
-
-        <!-- Contraseña -->
-        <div class="form-group">
-          <label for="password">Contraseña</label>
-          <input type="password" id="password" name="password" required />
-        </div>
-
-        <!-- Botón de registro -->
-        <button type="submit" class="btn-register">Crear cuenta</button>
-      </form>
+<div class="page-container">
+  <div class="background-container">
+    <div class="register-logo">
+      <img src="{% static '/image/logo.png' %}" alt="Logo de QA Station" />
     </div>
-  </body>
-</html>
-{% endblock %} 
 
-{% block extra_js %}
-<script src="{% static 'users/register.js' %}"></script>
+    <!-- Texto debajo del logo -->
+    <h2 class="title">Crea tu cuenta</h2>
+
+    {% if messages %}
+    {% for message in messages %}
+    <div class="message {% if message.tags %}{{ message.tags }}{% endif %}">{{ message }}</div>
+    {% endfor %}
+    {% endif %}
+    <form class="register-form" method="POST" action="{% url 'users:register' %}">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button type="submit" class="btn-register">Crear cuenta</button>
+    </form>
+  </div>
+</div>
 {% endblock %}
